# C-plus-plus_learning

./: CMakeLists.txt  README.md  main.cpp  notes.txt
eighth_task/: pointers_challenge.cpp
eleventh_task/: AccountChallenge.cpp  AccountChallenge.h  AccountUtils.cpp  AccountUtils.h  CheckingAccount.cpp  CheckingAccount.h  SavingsAccountChallenge.cpp  SavingsAccountChallenge.h  TrustAccount.cpp  TrustAccount.h
fifth_task/: elements_challenge.cpp
first_task/: constant_challenge.cpp
fourth_task/: calculator_challenge.cpp
nineth_task/: Movie.cpp  Movie.h  Movies.cpp  Movies.h
second_task/: containers_challenge.cpp
seventh_task/: functions_challenge.cpp
sixth_task/: cipher_challenge.cpp  pyramid_challenge.cpp
tenth_task/: CustomString.cpp  CustomString.h
third_task/: operators_challenge.cpp
thirteenth_task/: Element.cpp  Element.h  I_Element_Display.cpp  I_Element_Display.h  smart_pointers_run.cpp
twelfth_task/: AccountPoly.cpp  AccountPoly.h  I_PrintablePoly.cpp  I_PrintablePoly.h  TrustPolyAccount.cpp  TrustPolyAccount.h  UtilsPoly.cpp  UtilsPoly.h
